nav바 반응형 구현

--- a/src/App.css
+++ b/src/App.css
@@ -41,11 +41,11 @@ input[type="checkbox"] + label {
     margin: 0;
 }
 
-.container {
+/* .container {
     width: 100%;
     height: 100vh;
     padding: 0; margin: 0;
-}
+} */
 
 .flex-center {
     display: flex;
@@ -69,1089 +69,3 @@ input[type="checkbox"] + label {
 .none {
     display: none;
 }
-
-
-
-
-/* 
-.join-input-box input,
-.join-info-box input {
-    padding: 20px 16px;
-    border: 1px solid #C4C4C4;
-    border-radius: 5px;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.join-id-box {
-    position: relative;
-}
-
-.join-id-box {
-    margin-bottom: 24px;
-}
-
-.join-id-box span {
-    position: absolute;
-    display: block;
-    bottom: -28px; left: 0;
-}
-
-.join-box span {
-    margin-top: 10px;
-}
-
-.join-id-box {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.btn-id-valid {
-    margin-left: 12px;
-    padding: 16px 31px;
-    border-radius: 5px;
-    background-color: #21BF48;
-    border: none;
-    cursor: pointer;
-    color: #fff;
-    white-space: nowrap;
-}
-
-
-.join-input-box input:focus {
-    outline: none;
-}
-
-.join-input-box .id-input {
-    margin-bottom: 6px;
-}
-
-.join-pw-input, .join-repw-input {
-    background: #fff url('./assets/icon-check-off.svg') no-repeat 96% center;
-}
-
-.txt-warning {
-    margin: 10px 0 26px 0;
-    color: #EB5757;
-}
-
-
-.join-info-box {
-    display: flex;
-    flex-direction: column;
-    padding: 0 35px 35px 35px;
-    margin-top: 50px;
-    color: #767676;
-} */
-
-/* .phone-box, 
-.email-box {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-} */
-
-/* .phone-box {
-    position: relative;
-    margin-bottom: 28px;
-} */
-
-/* .phone-box span {
-    position: absolute;
-    display: block;
-    bottom: -28px; left: 0;
-    color: red;
-} */
-
-/* .phone-box input {
-    text-align: center;
-} */
-
-/* .phone-dropdown {
-    background: #fff url('./assets/icon-down-arrow.svg') no-repeat 90% center;
-    cursor: pointer;
-}
-
-.phone-dropdown ~ ul {
-    position: absolute;
-    bottom: -156px; left: 0;
-    width: 152px; height: 150px;
-    margin: 0; padding: 0;
-    border: 1px solid #C4C4C4;
-    border-radius: 5px;
-    box-sizing: border-box;
-    background-color: #fff;
-    overflow-y: scroll;
-}
-.phone-dropdown ~ ul li {
-    text-align: center;
-    list-style: none;
-    padding: 10px 0;
-}
-
-.phone-dropdown ~ ul li:hover {
-    background-color: #C4C4C4;
-    cursor: pointer;
-} */
-
-/* .phone-box input:nth-child(2), 
-.email-box span {
-    margin: 0 12px;
-} */
-
-/* .join-txt-box {
-    display: flex;
-    flex-direction: column;
-    color: #767676;
-    align-items: flex-start;
-}
-
-.join-txt-box div {
-    width: 454px;
-} */
-
-/* .info-check-box {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    margin: 34px 0;
-} */
-
-/* #info-check {
-    display: block;
-    margin-right: 10px;
-}
-
-.info-check-box label:hover, .info-check-box input:hover {
-    cursor: pointer;
-} */
-
-/* .btn-join {
-    padding: 19px 206px;
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    background-color: #C4C4C4;
-    border-radius: 5px;
-    cursor: pointer;
-    border: none;
-    margin-bottom: 110px;
-}
-
-.btn-join-valid {
-    padding: 19px 206px;
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    background-color: #21BF48;
-    border-radius: 5px;
-    cursor: pointer;
-    border: none;
-    margin-bottom: 110px;
-} */
-
-/* .btn-mypage-box {
-    display: inline-block;
-    margin: 20px 20px 20px 0;
-    width: 60px;
-    position: relative;
-}
-
-.select-box {
-    position: absolute;
-    padding: 0;
-    width: 130px;
-}
-
-.btn-mypage-box:active .select-box {
-    display: block;
-}
-
-.dropdown-box {
-    margin: 20px 20px 20px 0;
-    position: relative;
-}
-
-.dropdown {
-    z-index: 10;
-    position: absolute;
-    width: 130px;
-    top: 50%; left: 50%;
-    box-shadow: 0px 0px 5px #c4c4c4;
-    border: 1px solid #c4c4c4;
-    border-radius: 5px;
-    transform: translate(-50%, 30%);
-    padding: 0;
-}
-
-.dropdown li {
-    list-style: none;
-    color: #767676;
-    padding: 10px 12px;
-    margin: 10px;
-    text-align: center;
-}
-
-.dropdown li:not(:first-child) {
-    margin-top: 8px;
-}
-
-.dropdown li:hover {
-    color: #000;
-    cursor: pointer;
-    outline: 1px solid #767676;
-    border-radius: 5px;
-} */
-
-
-/* 메인 */
-/* .main-img-section {
-    width: 1280px; height: 500px;
-    margin: 60px auto;
-    overflow: hidden;
-    position: relative;
-    border-radius: 10px;
-}
-
-.slider-list {
-    display: flex;
-    transition: 0.5s;
-}
-
-.slider-list li {
-    width: 1280px;
-}
-
-.slider-list li img {
-    width: 1280px;
-    height: 500px;
-}
-
-.btn-arrow {
-    border: none;
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: 100px; height: 100px;
-    transform: translate(0, -50%);
-}
-
-.btn-prev {
-    left: 20px;
-    background: transparent url('./assets/icon-swiper-1.svg') no-repeat center;
-}
-
-.btn-next {
-    right: 20px;
-    background: transparent url('./assets/icon-swiper-2.svg') no-repeat center;
-} */
-
-
-/* 상품 리스트 */
-/* .product-container {
-    margin: 80px auto;
-    width: 1280px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 0;
-}
-
-.product-list {
-    width: 380px;
-    margin: 0 0 78px 0;
-    list-style: none;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    color: black;
-}
-
-.product-list img {
-    width: 380px; height: 380px;
-    border: 1px solid #C4C4C4;
-    border-radius: 10px;
-    box-sizing: border-box;
-}
-
-.product-store {
-    margin-top: 16px;
-    color: #767676;
-}
-
-.product-name {
-    margin-top: 10px;
-    font-size: 18px;
-    line-height: 22px;
-}
-
-.product-price {
-    margin-top: 10px;
-    font-size: 24px;
-    line-height: 30px;
-}
-
-.product-price::after {
-    content: '원';
-    font-size: 16px;
-    line-height: 20px;
-} */
-
-/* 특정 상품 페이지 */
-/* .product-detail-container {
-    margin: 80px 320px 180px;
-}
-
-.product-detail-box {
-    display: flex;
-    flex-direction: row;
-}
-
-.product-detail-box img {
-    width: 600px; height: 600px;
-}
-
-.product-detail-info {
-    width: 100%;
-    margin-left: 50px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.product-detail-info h2 {
-    margin: 16px 0 20px;
-}
-
-.txt-shipping {
-    display: inline-block;
-    margin-bottom: 20px;
-}
-
-.product-count {
-    margin: 30px 0;
-    font-size: 18px;
-    line-height: 23px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 150px;
-    border: 1px solid #767676;
-    border-radius: 5px;
-}
-
-.product-count span {
-    width: 48px;
-    text-align: center;
-}
-
-.product-count input {
-    cursor: pointer;
-    background-color: inherit;
-    width: 48px;
-    height: 48px;
-    font-size: 32px;
-    padding: 0;
-}
-
-.btn-count-minus {
-    border: none;
-    border-right: 1px solid #767676;
-    background: #fff url('./assets/icon-minus-line.svg') no-repeat center;
-}
-
-.btn-count-plus {
-    border: none;
-    border-left: 1px solid #767676;
-    background: #fff url('./assets/icon-plus-line.svg') no-repeat center;
-}
-
-.product-price-box {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end;
-    margin: 30px 0;
-}
-
-.total-price {
-    font-size: 18px;
-}
-
-.count-price {
-    color: #767676;
-    font-size: 18px;
-}
-
-.count-price b {
-    color: #21BF48;
-}
-
-.count-price span:first-child::after {
-    content: '|';
-    margin: 0 12px;
-}
-
-.count-price span:last-child {
-    font-size: 36px;
-    color: #21BF48;
-}
-
-.count-price span:last-child::after {
-    content: '원';
-    font-size: 18px;
-}
-
-.order-btn-box {
-    display: flex;
-}
-
-.order-btn-box input {
-    color: #fff;
-    font-weight: bold;
-    font-size: 18px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-}
-
-.btn-order {
-    background-color: #21BF48;
-    flex-grow: 2;
-    padding: 20px 160px;
-    margin: 0 14px 0 0;
-}
-
-.btn-shipping-cart {
-    flex-grow: 1;
-    padding: 20px 64px;
-    background-color: #767676;
-} */
-
-/* 푸터 */
-/* .footer-container {
-    background-color: #F2F2F2;
-    padding: 60px 320px;
-} */
-
-/* .footer-link-box {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 30px;
-}
-
-.footer-link-box span {
-    cursor: pointer;
-}
-
-.footer-link-box span:not(:last-child)::after {
-    content: '|';
-    margin: 0 14px;
-} */
-
-/* .sns-box img {
-    margin-left: 14px;
-    cursor: pointer;
-} */
-
-/* .footer-info {
-    display: flex;
-    flex-direction: column;
-}
-
-.footer-info {
-    line-height: 24px;
-    margin-top: 30px;
-    color: #767676;
-} */
-
-/* .footer-info span:nth-child(3):after {
-    content: '| 통신판매업';
-    margin-left: 6px;
-} */
-
-/* 장바구니 */
-/* .cart-title, .order-title {
-    text-align: center;
-    margin: 50px 0;
-    font-size: 36px;
-} */
-
-/* .cart-container, .order-container {
-    padding: 0 320px;
-} */
-
-/* .cart-bar, .order-bar {
-    background-color: #F2F2F2;
-    font-size: 18px;
-    display: flex;
-    flex-direction: row;
-    padding: 20px 0;
-    border-radius: 10px;
-} */
-
-/* .cart-bar .bar-info {
-    margin-left: 364px;
-}
-
-.cart-bar .bar-count {
-    margin-left: 379px;
-}
-
-.cart-bar .bar-price {
-    margin-left: 238px;
-} */
-
-
-
-/* .cart-product-list {
-    margin: 35px 0 80px;
-}
-
-.cart-product-list li {
-    border: 2px solid #C4C4C4;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 20px 0;
-    position: relative;
-}
-
-.cart-product-list li:not(:first-child) {
-    margin-top: 10px;
-}
-
-.cart-product-list li label {
-    margin-left: 34px;
-} */
-
-/* .cart-product-img {
-    width: 160px; height: 160px;
-    margin-left: 40px;
-    border-radius: 10px;
-} */
-
-/* .cart-product-info {
-    margin-left: 36px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 420px;
-}
-
-.cart-product-info span {
-    display: inline-block;
-} */
-
-/* .cart-store {
-    color: #767676;
-}
-
-.cart-name {
-    font-size: 18px;
-    margin-top: 10px;
-}
-
-.cart-price {
-    margin-top: 10px;
-    font-weight: bold;
-}
-
-.cart-shopping {
-    margin-top: 40px;
-    color: #767676;
-    font-size: 14px;
-} */
-
-/* .cart-order {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 148px;
-}
-
-.cart-order span {
-    color: #EB5757;
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.cart-order input {
-    padding: 10px 35px;
-    margin-top: 26px;
-    border: none;
-    border-radius: 5px;
-    background-color: #21BF48;
-    color: #fff;
-    cursor: pointer;
-} */
-
-/* .cart-delete {
-    width: 20px; height: 20px;
-    position: absolute;
-    top: 22px; right: 21px;
-    background: #fff url('./assets/icon-delete.svg') no-repeat center;
-    cursor: pointer;
-    border: none;
-} */
-
-/* .cart-total {
-    background-color: #F2F2F2;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    border-radius: 10px;
-    padding: 42px 0;
-}
-
-.cart-total span {
-    display: block;
-}
-
-.cart-total div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
-
-/* .total .tot-price {
-    margin-left: 112px;
-}
-
-.total .tot-bold {
-    font-size: 24px;
-    font-weight: bold;
-    margin-top: 12px;
-}
-
-.total .tot-bold::after {
-    content: '원';
-    font-size: 16px;
-    display: inline-block;
-    margin-left: 2px;
-}
-
-.total .tot-minus {
-    background: #fff url('./assets/icon-minus-line.svg') no-repeat center;
-    width: 34px; height: 34px;
-    border-radius: 50%;
-    margin: 0 100px;
-}
-
-.total .tot-plus {
-    background: #fff url('./assets/icon-plus-line.svg') no-repeat center;
-    width: 34px; height: 34px;
-    border-radius: 50%;
-    margin: 0 100px;
-} */
-
-/* .payment-price-box {
-    margin-left: 229px;
-}
-
-.payment-price {
-    font-size: 36px;
-    color: #EB5757;
-} */
-
-/* .cart-order-button {
-    display: block;
-    padding: 20px 66px;
-    color: #fff;
-    background-color: #21BF48;
-    font-size: 24px;
-    font-weight: bold;
-    border: none;
-    border-radius: 5px;
-    margin: 40px auto 160px;
-    cursor: pointer;
-} */
-
-/* .modal {
-    display: none;
-    position: fixed;
-    top: 0; right: 0; bottom: 0; left: 0;
-    z-index: 99;
-    background-color: rgba(0, 0, 0, 0.6);
-} */
-
-/* .modal-container {
-    width: 360px;
-    height: 200px;
-    border: 1px solid #c4c4c4;
-    position: relative;
-    margin: 0 auto;
-    top: 300px;
-    overflow: hidden;
-    background-color: #fff;
-    border-radius: 5px;
-} */
-
-/* .open-modal {
-    display: block;
-    animation: modal-bg-show 0.3s;
-} */
-
-/* @keyframes modal-bg-show {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-} */
-
-/* .modal-container p {
-    margin: 60px 36px 32px;
-}
-
-.modal-container img {
-    cursor: pointer;
-    width: 20px; height: 20px;
-    position: absolute;
-    top: 20px; right: 20px;
-}
-
-.modal-container h4 {
-    margin: 60px 0 40px;
-    text-align: center;
-} 
-
-.modal-container div {
-    text-align: center;
-}
-
-.modal-container div input {
-    width: 100px; height: 40px;
-    cursor: pointer;
-}
-
-.modal-container div input:first-child {
-    margin-right: 10px;
-    font-size: 16px;
-    border: 1px solid #c4c4c4;
-    background-color: #fff;
-    color: #767676;
-    border-radius: 5px;
-}
-
-.modal-container div input:last-child {
-    font-size: 16px;
-    border: 1px solid #21BF48;
-    background-color: #21BF48;
-    color: #fff;
-    border-radius: 5px;
-}
-
-.modal-container article {
-    font-size: 18px;
-    line-height: 23px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 150px;
-    border: 1px solid #767676;
-    border-radius: 5px;
-    margin: 44px auto 26px;
-}
-
-.modal-container article span {
-    width: 48px;
-    text-align: center;
-}
-
-.modal-container article input {
-    cursor: pointer;
-    background-color: inherit;
-    width: 48px;
-    height: 48px;
-    font-size: 32px;
-    padding: 0;
-} */
-
-/* 장바구니 비어있을 때 */
-/* .empty-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 180px 0;
-} */
-
-
-/* 주문/결제하기 */
-/* .order-bar .bar-info {
-    margin-left: 261px;
-}
-
-.order-bar .bar-count {
-    margin-left: 360px;
-}
-
-.order-bar .bar-delivery {
-    margin-left: 188px;
-}
-
-.order-bar .bar-price {
-    margin-left: 171px;
-} */
-
-/* .order-item {
-    margin-top: 16px;
-    padding: 8px 0 18px 8px;
-    border-bottom: 2px solid #C4C4C4;
-    display: flex;
-    flex-direction: row;
-}
-.order-item img {
-    width: 104px; height: 104px;
-    border-radius: 10px;
-    display: inline-block;
-} */
-
-/* .order-item-info {
-    display: flex;
-    flex-direction: column;
-    margin: 20px 0 0 36px;
-    width: 440px;
-} */
-
-/* .order-item-name {
-    font-size: 18px;
-    margin: 6px 0 10px;
-    display: block;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-} */
-
-/* .order-item-quantity {
-    color: #767676;
-    font-size: 14px;
-} */
-
-/* .order-discount {
-    margin-left: 120px;
-} */
-
-/* .order-shopping-fee {
-    margin-left: 208px;
-    font-size: 18px;
-    color: #767676;
-} */
-
-/* .order-item-price {
-    margin-left: 180px;
-    font-weight: bold;
-    font-size: 18px;
-} */
-
-/* .order-total-price {
-    margin-top: 30px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-}
-
-.order-total-price span:first-child {
-    font-size: 18px;
-}
-
-.order-total-price span:last-child {
-    font-size: 24px;
-    font-weight: bold;
-    color: #EB5757;
-    margin-left: 10px;
-} */
-
-/* .order-delivery-container {
-    margin: 96px 0 0 0;
-}
-
-.order-delivery-container h3, .payment-container h3 {
-    font-size: 24px;
-    margin: 0 0 18px 0;
-} */
-
-/* .order-receiver {
-    margin-top: 40px;   
-}
-
-.order-receiver h4 {
-    font-size: 18px;  
-    margin-bottom: 8px;
-} */
-
-/* .order-input-wrap, .order-phone-wrap, .order-delivery-wrap {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    border-bottom: 1px solid #c4c4c4;
-}
-
-.order-input-wrap p, .order-phone-wrap p, .order-delivery-wrap p {
-    width: 170px;
-}
-
-.order-input-wrap div, .order-phone-wrap div {
-    width: 334px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.order-input-wrap div input, 
-.order-phone-wrap div input, 
-.order-post-wrap input, 
-.order-message-wrap input {
-    border: 1px solid #c4c4c4;
-    height: 40px;
-    padding: 0 0 0 8px;
-    margin: 8px 0;
-}
-
-.order-input-wrap div input {
-    width: 100%;
-}
-
-.order-phone-wrap div input {
-    width: 80px;
-}
-
-.order-post-wrap, .order-message-wrap {
-    width: 800px;
-}
-
-.order-post-wrap input {
-    width: 170px;
-    margin-right: 10px;
-}
-
-.order-post-wrap .btn-post {
-    background-color: #21BF48;
-    color: #fff;
-    border-radius: 5px;
-    border: 1px solid #21BF48;
-    cursor: pointer;
-    padding: 10px 30px;
-}
-
-.order-post-wrap div {
-    display: flex;
-    flex-direction: column;
-}
-
-.order-post-wrap div input, .order-message-wrap input {
-    width: 100%;
-}
-
-.order-post-wrap div input:first-child {
-    margin: 0 0 8px 0;
-} */
-
-/* .payment-container {
-    margin: 70px 0 120px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-} */
-
-/* .payment-method-wrap input, .payment-method-wrap label {
-    cursor: pointer;
-}
-
-.payment-method-wrap input {
-    margin: 18px 10px;
-}
-
-.payment-method-wrap label {
-    margin: 0 10px 0 0;
-} */
-
-/* .final-pay-info-container article {
-    border: 2px solid #21BF48;
-    border-radius: 10px;
-    padding-top: 32px;
-    width: 480px;
-} */
-
-/* .pay-info-wrap, .pay-total-price {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.pay-info-wrap {
-    margin: 0 30px 15px;
-}
-
-.pay-info-wrap span:last-child {
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.pay-info-wrap span:last-child::after {
-    content: '원';
-    color: #767676;
-    font-size: 14px;
-    margin-left: 4px;
-} */
-
-/* .pay-total-price {
-    margin: 0 30px 24px;
-    padding-top: 29px;
-    border-top: 1px solid #c4c4c4;
-}
-
-.pay-total-price span:last-child {
-    font-size: 24px;
-    font-weight: bold;
-    color: #EB5757;
-} */
-
-/* .pay-area {
-    background-color: #F2F2F2;
-    padding: 30px;
-}
-
-.pay-check-area {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-}
-
-.pay-check-area input {
-    margin-right: 10px;
-}
-
-.pay-check-area input, .pay-check-area label {
-    cursor: pointer;
-} */
-
-/* .btn-pay {
-    padding: 20px 64px;
-    color: #fff;
-    background-color: #c4c4c4;
-    border: none;
-    border-radius: 5px;
-    font-weight: bold;
-    font-size: 24px;
-    margin: 30px auto 0;
-    cursor: pointer;
-    display: block;
-}
-
-.btn-pay-check {
-    background-color: #21BF48;
-}
-
-#pay-check {
-    display: block;
-} */
