--- a/src/View/Main.module.css
+++ b/src/View/Main.module.css
@@ -1,5 +1,6 @@
 .container {
-    width: 1280px; height: 500px;
+    max-width: 1280px; 
+    height: 500px;
     margin: 3.75em auto;
     overflow: hidden;
     position: relative;
@@ -48,7 +49,7 @@
 
 .product {
     margin: 5em auto;
-    width: 1280px;
+    max-width: 1280px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
