--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -1,32 +1,37 @@
 .container {
     width: 100%;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.1);
+}
+
+.inner {
     display: flex;
     flex-direction: row;
     align-items: center;
-    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.1);
+    padding: 0 3rem;
 }
 
 
 .icon {
     width: 124px;
     height: 38px;
-    margin-left: 20em;
+    margin-right: 1.875em;
 }
 
 
 .search {
-    width: 400px;
-    padding: 0.8125em 0 0.8125em 1.375em;
-    margin-left: 1.875em;
+    width: 400px; height: 46px;
+    padding: 0 4em 0 1.375em;
     border: 2px solid #21BF48;
     border-radius: 50px;
     background: #fff url('../assets/search-img.png') no-repeat right 22px center / 28px;
 }
 
+
 .purchase, .sale {
     display: flex;
     flex-direction: row;
-    margin-left: 29.5em;
+    align-items: center;
+    margin-left: auto;
 }
 
 
@@ -121,9 +126,48 @@
     border-radius: 5px;
 }
 
+@media screen and (max-width: 1023px) {
+    .search {
+        display: none;
+    }
 
-@media screen and (max-width: 768px) {
-    /* .icon {
+    .icon {
+        width: 100px;
+        height: 32px;
+    }
+
+    
+    .icon-box, .dropdown-box {
+        font-size: 0.875rem;
+    }
+    
+    .mypage, .cart {
+        font-size: 0.625rem;
+        line-height: 20px;
+    }
+
+    .dropdown {
+        font-size: 0.875rem;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .icon {
+        width: 92px;
+        height: 28px;
+    }
+
+    
+    .icon-box, .dropdown-box {
         font-size: 0.75rem;
-    } */
+    }
+    
+    .mypage, .cart {
+        font-size: 0.5rem;
+        line-height: 28px;
+    }
+
+    .dropdown {
+        font-size: 0.75rem;
+    }
 }
