--- a/src/View/ProductDetail.module.css
+++ b/src/View/ProductDetail.module.css
@@ -1,23 +1,26 @@
 .container {
-    margin: 5em 20em 11.25em;
+    margin: 5em 0 20em;
+    padding: 0 1.5em;
 }
 
 
 .detail-box {
     display: flex;
     flex-direction: row;
+    max-width: 1280px;
+    margin: 0 auto;
 }
 
 
 .detail-box img {
-    width: 600px; height: 600px;
+    width: 600px; height: auto;
 }
 
 
 .info {
     width: 100%;
     margin-left: 3.125em;
-    overflow: hidden;
+    /* overflow: hidden; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -139,14 +142,109 @@
 
 .order {
     background-color: #21BF48;
-    flex-grow: 2;
+    flex-grow: 1;
     padding: 1.11em 8.88em;
     margin: 0 0.77em 0 0;
 }
 
 
 .cart {
-    flex-grow: 1;
     padding: 1.11em 3.55em;
     background-color: #767676;
+}
+
+@media screen and (max-width: 1023px) {
+    .container {
+        font-size: 0.875rem;
+    }
+    .detail-box img {
+        width: 420px;
+    }
+
+    .info {
+        margin-left: 2.5em;
+    }
+
+    .count {
+        font-size: 1rem;
+        width: 112px;
+    }
+
+    .count input {
+        font-size: 1rem;
+        width: 36px;
+        height: 36px;
+    }
+
+    .count span {
+        width: 36px;
+    }
+
+    .total-price {
+        font-size: 0.875rem;
+    }
+
+    .price {
+        font-size: 0.875rem;
+    }
+
+    .price span:last-child {
+        font-size: 1.875rem;
+    }
+
+    .order-box {
+        flex-direction: column;
+    }
+
+    .order-box input {
+        width: 100%;
+        margin-top: 0.5em;
+        font-size: 0.875rem;
+        padding: 1em 0;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .container {
+        font-size: 0.75rem;
+    }
+
+
+    .detail-box img {
+        width: 360px;
+    }
+
+
+    .info {
+        margin-left: 2em;
+    }
+
+
+    .count {
+        font-size: 0.875rem;
+    }
+
+
+    .total-price {
+        font-size: 0.75rem;
+    }
+
+    .price {
+        font-size: 0.75rem;
+    }
+
+    .price span:last-child {
+        font-size: 1.5rem;
+    }
+
+    .order-box {
+        flex-direction: column;
+    }
+
+    .order-box input {
+        width: 100%;
+        margin-top: 0.5em;
+        font-size: 0.75rem;
+        padding: 1em 0;
+    }
 }
