--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,30 @@
 body, h1, h2, h3, h4, h5, h6, ul {
     margin: 0; padding: 0;
 }
+
+
 a {
     text-decoration: none;
 }
+
+
 li {
     list-style: none;
 }
+
+
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
 
+
 input[type="checkbox"] {
     display: none;
 }
+
+
 input[type="checkbox"] + label {
     display: inline-block;
     width: 20px; height: 20px;
@@ -25,6 +34,8 @@ input[type="checkbox"] + label {
     cursor: pointer;
     position: relative;
 }
+
+
 .check:checked + label::after {
     content: '';
     background-color: #21BF48;
@@ -36,16 +47,12 @@ input[type="checkbox"] + label {
     transform: translate(-50%, -50%);
 }
 
+
 .div-line {
     border: 1px solid #C4C4C4;
     margin: 0;
 }
 
-/* .container {
-    width: 100%;
-    height: 100vh;
-    padding: 0; margin: 0;
-} */
 
 .flex-center {
     display: flex;
@@ -54,18 +61,38 @@ input[type="checkbox"] + label {
     justify-content: center;
 }
 
+
 .flex-row {
     flex-direction: row;
 }
+
 
 .proper {
     color: #21BF48;
 }
 
+
 .error {
     color: red;
 }
 
+
 .none {
     display: none;
+}
+
+@media screen and (max-width: 1023px) {
+    input[type="checkbox"] + label {
+        width: 16px; height: 16px;
+    }
+    
+    
+    .check:checked + label::after {
+        width: 12px;
+        height: 12px;
+    }
+
+    .proper, .error {
+        font-size: 0.75rem;
+    }
 }
