판매자 회원가입/로그인 기능 구현

--- a/src/View/Join.module.css
+++ b/src/View/Join.module.css
@@ -45,8 +45,7 @@
 }
 
 
-.tab-box .buyer, 
-.tab-box .seller {
+.tab-box .tab{
     font-size: 1.125rem;
     flex: 1;
     background-color: #C4C4C4;
@@ -58,12 +57,16 @@
     text-align: center;
 }
 
-
-.tab-box input:checked + .seller, 
-.tab-box input:checked + .buyer {
+.tab-box .check {
     background-color: #fff;
     border-width: 1px 1px 0 1px;
 }
+
+/* .tab-box input:checked + .seller, 
+.tab-box input:checked + .buyer {
+    background-color: #fff;
+    border-width: 1px 1px 0 1px;
+} */
 
 
 .id-box {
@@ -228,6 +231,12 @@
 
 .join-valid {
     background-color: #21BF48;
+}
+
+
+.buisness {
+    display: inline-block;
+    margin-top: 1em;
 }
 
 @media screen and (max-width: 767px) {
