--- a/src/View/ProductRegistration.module.css
+++ b/src/View/ProductRegistration.module.css
@@ -3,6 +3,11 @@
 }
 
 
+.none {
+    display: none;
+}
+
+
 .subject {
     display: flex;
     flex-direction: row;
@@ -17,8 +22,8 @@
 
 .view {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 
@@ -28,16 +33,136 @@
 }
 
 
+.imgwrap > input[type="file"] {
+    display: none;
+}
+
+
 .imgwrap > p {
     color: #767676;
-
+    margin-bottom: 10px;
 }
+
 
 .imgwrap > div {
     width: 454px; height: 454px;
     background-color: #c4c4c4;
     margin-right: 40px;
+    position: relative;
 }
-.test {
+
+
+.imgwrap > div img {
+    width: 100%; height: 100%;
+}
+
+
+.upload {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50px; height: 50px;
+    display: inline-block;
+    border: none;
+    border-radius: 50%;
+    background: #767676 url('../assets/icon-img.png') no-repeat 50%;
+    cursor: pointer;
+}
+
+
+.product-info p {
+    color: #767676;
+    margin-bottom: 10px;
+}
+
+
+.product-name input {
     width: 826px;
+    padding: 18px 70px 18px 18px;
+    border: 1px solid #C4C4C4;
+    border-radius: 5px;
+}
+
+
+.numinput {
+    margin-top: 16px;
+}
+
+
+.numinput input[type='number'] {
+    padding: 16px;
+    border: 1px solid #C4C4C4;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+
+.input-wrap {
+    display: flex;
+    flex-direction: row;
+}
+
+
+.input-wrap > div {
+    color: #fff;
+    background-color: #C4C4C4;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    width: 54px;
+    line-height: 54px;
+    text-align: center;
+}
+
+
+.numinput input[type='radio'] {
+    display: none;
+}
+
+
+.method {
+    color: #767676;
+    margin-right: 10px;
+    border: 1px solid #C4C4C4;
+    border-radius: 5px;
+    width: 220px; height: 54px;
+    line-height: 54px;
+    text-align: center;
+    cursor: pointer;
+    display: inline-block;
+}
+
+
+.check {
+    color: #fff;
+    background-color: #21BF48;
+    border: none;
+}
+
+
+.btnWrap {
+    margin-top: 50px;
+}
+
+
+.save, .cancel {
+    width: 200px; height: 60px;
+    border-radius: 5px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
+.save {
+    color: #fff;
+    background-color: #21BF48;
+    border: 1px solid #21BF48;
+    margin-left: 14px;
+}
+
+
+.cancel {
+    background-color: #fff;
+    color: #767676;
+    border: 1px solid #C4C4C4;
 }
